getFirst() used